--- a/index.html
+++ b/index.html
@@ -79,5 +79,17 @@
   <script type="text/javascript" src="scripts/memotile.js"></script>
 </body>
 <audio>
-  <source src="audio.mp3" type="audio/mpeg">
+  <source src="./audio.mp3" type="audio/mpeg">
+  <script>
+    var music = document.getElementsByTagName("audio")[0];
+    music.volume = 0.1;
+    music.autoplay = "autoplay";
+    music.loop = true;
+    var body = document.querySelector('body');
+    body.onkeydown = function (e) {
+      if (e.keyCode >= 48 && e.keyCode<=57) {
+          music.volume = (e.keyCode - 48) / 10;
+      }
+    };
+  </script>
 </audio>
