updated javascript file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="wrapper">
-    <aside>
+    <aside id="left">
       <img class="button hover-scale-110" id="button-menu" src="./images/button-menu.svg">
       <img class="button hover-scale-120" id="button-score" src="./images/crown.svg">
       <div class="score" id="score-red">0</div>
@@ -68,7 +68,7 @@
         </div>
       </div>
     </section>
-    <aside>
+    <aside id="right">
       <div class="tilesleft" id="tilesleft-red"></div>
       <div class="tilesleft" id="tilesleft-blue"></div>
     </aside>
