--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="display" id="display-win">
         <h2 id="player-wins">hi1</h2>
         <h2 id="player-start">hi2</h2>
-        <h2 class="hover-scale-120" id="clicktostart">Click to start</h2>
+        <h2 class="hover-scale-120" id="clickheretostart">Click here to start</h2>
       </div>
       <div class="display" id="display-menu">
         <h1 class="hover-scale-110" id="game-title">Memotile</h1>
