added localStorage for player scores

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
       <div class="display" id="display-howtoplay">
         <h3 class="hover-scale-110">How to play</h3>
         <ol>
-          <li>Find a friend to play this two player game</li>
-          <li>Pick a colour each, red or blue</li>
-          <li>Choose your favourite Pokemon</li>
+          <li>Find a friend to play this two player game.</li>
+          <li>Pick a colour each, red or blue.</li>
+          <li>Choose your favourite Pokémon.</li>
           <li>Click on the number of grid tiles to play with. The higher the more difficult!</li>
-          <li>When you press start, the tiles will appear for a short while. Try to remember the position of the Pokemon that you have chosen</li>
-          <li>After they vanish, click on the tiles that your Pokemon are on. If you click on a wrong tile, it will be your opponents turn to play.</li>
-          <li>Once you open all the tiles with your Pokemon, you win the round!</li>
+          <li>When you press start, the tiles will appear for a short while. Try to remember the position of the Pokémon that you have chosen.</li>
+          <li>After they vanish, click on the tiles that your Pokémon are on. If you click on a wrong tile, it will be your opponents turn to play.</li>
+          <li>Once you open all the tiles with your Pokémon, you win the round!</li>
         </ol>
         <ul>
-          <li>You can click on the crown to reset the scores at anytime</li>
-          <li>You can click on the settings and change your Pokemon at anytime</li>
+          <li>You can click on the crown to reset the scores at anytime.</li>
+          <li>You can click on the settings and change your Pokémon at anytime.</li>
         </ul>
-        <h4 id="closemenu" class="hover-scale-110">Click anywhere to close menu</h3>
+        <h4 id="closemenu" class="hover-scale-110">Click to close menu</h3>
       </div>
     </section>
     <aside id="right">
