updated menu button visibility at game start when user has data in localstorage

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <li>Once you open all the tiles with your Pokémon, you win the round!</li>
         </ol>
         <ul>
-          <li>You can click on the crown to reset the scores at anytime.</li>
+          <li>You can click on the crown to reset the scores at anytime. Scores are saved on your browser.</li>
           <li>You can click on the settings and change your Pokémon at anytime.</li>
         </ul>
         <h4 id="closemenu" class="hover-scale-110">Click to close menu</h3>
