--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <aside id="left">
       <img class="button hover-scale-110" id="button-menu" src="./images/button-menu.svg">
       <img class="button hover-scale-120" id="button-score" src="./images/crown.svg">
-      <div class="score" id="score-red">0</div>
-      <div class="score" id="score-blue">0</div>
+      <div class="score black-outline" id="score-red">0</div>
+      <div class="score black-outline" id="score-blue">0</div>
     </aside>
     <section>
       <div class="display" id="display-grid">
@@ -22,9 +22,9 @@
         <h2 id="player-turn"></h2>
       </div>
       <div class="display" id="display-win">
-        <h2 id="player-wins">hi1</h2>
-        <h2 id="player-start">hi2</h2>
-        <h2 class="hover-scale-120" id="clicktostart">Click to start</h2>
+        <h2 id="player-wins" class="white-outline"></h2>
+        <h2 id="player-start" class="white-outline"></h2>
+        <h2 class="hover-scale-120 white-outline" id="clicktostart">Click to start</h2>
       </div>
       <div class="display" id="display-menu">
         <div class="hover-scale-110" id="button-howtoplay">
